--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>More Villagers</title>
-    <script src="/home.js" defer></script>
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="/uicons-regular-rounded/css/uicons-regular-rounded.css">
-    <link rel="stylesheet" href="/uicons-brands/css/uicons-brands.css">
+    <script src="./home.js" defer></script>
+    <link rel="stylesheet" href="./home.css">
+    <link rel="stylesheet" href="./uicons-regular-rounded/css/uicons-regular-rounded.css">
+    <link rel="stylesheet" href="./uicons-brands/css/uicons-brands.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 </head>
@@ -32,16 +32,16 @@
             <!-- <canvas id="canvasTwo"></canvas> -->
             <div class="headOne" id="trigOne">Professions</div>
             <div class="listOne">
-                <img src="/images/arheolog.png" alt="" class="imager left" id="imgLone">
-                <img src="/images/Paint.png" alt="" class="imager rigt" id="imgRone">
-                <img src="/images/Pasichnik.png" alt="" class="imager left" id="imgLwo">
-                <img src="/images/Gardener.png" alt="" class="imager rigt" id="imgRwo">
-                <img src="/images/lisorub.png" alt="" class="imager left" id="imgLere">
-                <img src="/images/pekar.png" alt="" class="imager rigt" id="imgRere">
-                <img src="/images/moryak.png" alt="" class="imager left" id="imgLiv">
-                <img src="/images/hunter.png" alt="" class="imager rigt" id="imgRiv">
-                <img src="/images/mehanic.png" alt="" class="imager left" id="imgLix">
-                <img src="/images/musikant.png" alt="" class="imager rigt" id="imgRix">
+                <img src="./images/arheolog.png" alt="" class="imager left" id="imgLone">
+                <img src="./images/Paint.png" alt="" class="imager rigt" id="imgRone">
+                <img src="./images/Pasichnik.png" alt="" class="imager left" id="imgLwo">
+                <img src="./images/Gardener.png" alt="" class="imager rigt" id="imgRwo">
+                <img src="./images/lisorub.png" alt="" class="imager left" id="imgLere">
+                <img src="./images/pekar.png" alt="" class="imager rigt" id="imgRere">
+                <img src="./images/moryak.png" alt="" class="imager left" id="imgLiv">
+                <img src="./images/hunter.png" alt="" class="imager rigt" id="imgRiv">
+                <img src="./images/mehanic.png" alt="" class="imager left" id="imgLix">
+                <img src="./images/musikant.png" alt="" class="imager rigt" id="imgRix">
             </div>
         </section>
         <section class="lang">
