--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>More Villagers</title>
     <script src="./home.js" defer></script>
     <link rel="stylesheet" href="./home.css">
-    <link rel="web icon" href="./images/moreVillagersTitle.png">
+    <link rel="web icon" href="./images/icon.png">
     <link rel="stylesheet" href="./uicons-regular-rounded/css/uicons-regular-rounded.css">
     <link rel="stylesheet" href="./uicons-brands/css/uicons-brands.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
