--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="./home.js" defer></script>
     <link rel="stylesheet" href="./home.css">
     <link rel="web icon" href="./images/icon.png">
-    <link rel="stylesheet" href="./uicons-regular-rounded/css/uicons-regular-rounded.css">
-    <link rel="stylesheet" href="./uicons-brands/css/uicons-brands.css">
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
 </head>
